# srpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/Add/: CMakeLists.txt  client.cpp  server.cpp
srpc/client/: CMakeLists.txt  RpcClient.cpp  RpcClient.h  RpcClientService.cpp  RpcClientService.h
srpc/common/: CMakeLists.txt  Exception.h  FunctionTraits.h  RequestObject.h  RespondObject.h
srpc/server/: CMakeLists.txt  Procedure.h  RpcServer.cpp  RpcServer.h  RpcService.cpp  RpcService.h
